--- a/index.html
+++ b/index.html
@@ -11,12 +11,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Responsive Layout</title>
 </head>
 <body>
     <!--HEADER-->
-    <header class="container">
-        <h1>logo</h1>
+    <header>
+        <div class="header container">
+            <div class="row">
+                <img src="img/logo.png" alt="logo">
+                <i class="fa-solid fa-bars"></i>
+                <div class="list">
+                    <ul>
+                        <li><button class="button">Testimonials</button></li>
+                        <li><button class="button">Planning</button></li>
+                        <li><button class="button">Features</button></li>
+                        <li><button class="button">About Us</button></li>
+                        <li><button class="button white">Get Started</button></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </header>
     
 </body>
