--- a/index.html
+++ b/index.html
@@ -36,5 +36,68 @@
         </div>
     </header>
     
+    <main>
+        <section>
+            <div class="row">
+                <div class="card special-card">
+                    <div>
+                        <h2>
+                            Get a demo application
+                        </h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eveniet sapiente eaque eligendi sint recusandae sequi explicabo reprehenderit minus ea, quae voluptate? Cupiditate laudantium laboriosam minus quis dolore, sunt dolorem.
+                        </p>
+                        <button class="button blue-button">
+                            <i class="fa-brands fa-apple">App Store</i>
+                        </button>
+                        <div>
+                            <img src="img/phone.png" alt="phone">
+                        </div>
+
+                        <div>
+                            <h2>
+                                Clean Code
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                            </p>
+                        </div>
+
+                        <div>
+                            <h2>
+                                Web Design
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                            </p>
+                        </div>
+
+                        <div>
+                            <h2>
+                                Development
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                            </p>
+                        </div>
+
+                        <div>
+                            <h2>
+                                Branding
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                            </p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        
+    </main>
+
 </body>
 </html>
