--- a/index.html
+++ b/index.html
@@ -331,7 +331,48 @@
             </div>
         </section>
     </main>
-    
+
+    <!--FOOTER-->
+    <footer>
+        <div>
+            <div>
+                <h4>
+                    GET STARTED
+                </h4>
+                <h2>
+                    Simple, Transparent Pricing
+                </h2>
+                <h1>
+                    It's Free!
+                </h1>
+            </div>
+
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum cupiditate dicta fugit ratione doloremque nihil, optio autem magni veritatis mollitia molestiae alias quam natus blanditiis explicabo laboriosam adipisci provident repellat.
+                </p>
+                <button>
+                    Get Started
+                </button>
+                <p>
+                    Copyright 2021 Boolean , Classe XX , Privacy policy
+                </p>
+            </div>
+        </div>
+
+        <div class="containerblack">
+            <div>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quam repellendus minima earum vitae dicta hic quasi? Eligendi corporis cupiditate unde, aliquam suscipit illum voluptate asperiores facilis soluta mollitia deserunt?
+                </p>
+
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing.
+                </p>
+            </div>
+
+        </div>
+    </footer>
 
 </body>
 </html>
