aggiunte background color sul css

--- a/index.html
+++ b/index.html
@@ -37,72 +37,66 @@
     </header>
     
     <!--MAIN-->
-    <main>
-        <section>
+    <main class="main container">
+        <section class="section-white">
             <div class="row">
                 <div class="card special-card">
+                    <h2>
+                        Get a demo application
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eveniet sapiente eaque eligendi sint recusandae sequi explicabo reprehenderit minus ea, quae voluptate? Cupiditate laudantium laboriosam minus quis dolore, sunt dolorem.
+                    </p>
+                    <button class="button blue-button">
+                        <i class="fa-brands fa-apple">App Store</i>
+                    </button>
                     <div>
-                        <h2>
-                            Get a demo application
-                        </h2>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eveniet sapiente eaque eligendi sint recusandae sequi explicabo reprehenderit minus ea, quae voluptate? Cupiditate laudantium laboriosam minus quis dolore, sunt dolorem.
-                        </p>
-                        <button class="button blue-button">
-                            <i class="fa-brands fa-apple">App Store</i>
-                        </button>
-                        <div>
-                            <img src="img/phone.png" alt="phone">
-                        </div>
-
-                        <div>
-                            <div><i class="fa-solid fa-file-code"></i></div>
-                            <h2>
-                                Clean Code
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
-                            </p>
-                        </div>
-
-                        <div>
-                            <div><i class="fa-solid fa-compass-drafting"></i></div>
-                            <h2>
-                                Web Design
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
-                            </p>
-                        </div>
-
-                        <div>
-                            <div><i class="fa-solid fa-laptop-code"></i></div>
-                            <h2>
-                                Development
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
-                            </p>
-                        </div>
-
-                        <div>
-                            <div><i class="fa-solid fa-file-code"></i></div>
-                            <h2>
-                                Branding
-                            </h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
-                            </p>
-                        </div>
-
+                        <img src="img/phone.png" alt="phone">
                     </div>
+                </div>
 
+                <div class="card">
+                    <div><i class="fa-solid fa-file-code"></i></div>
+                    <h2>
+                        Clean Code
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                    </p>
+                </div>
+                <div class="card">
+                    <div><i class="fa-solid fa-compass-drafting"></i></div>
+                    <h2>
+                        Web Design
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                    </p>
+                </div>
+                <div class="card">
+                    <div><i class="fa-solid fa-laptop-code"></i></div>
+                    <h2>
+                        Development
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                    </p>
+                </div>
+                <div class="card">
+                    <div><i class="fa-solid fa-file-code"></i></div>
+                    <h2>
+                        Branding
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero commodi, ad expedita eaque velit ipsum dignissimos mollitia illo dolore consequuntur vel! Culpa doloremque quisquam obcaecati delectus cupiditate perspiciatis alias labore.
+                    </p>
                 </div>
 
             </div>
         </section>
 
-        <section>
+<!--STRATEGIC PLANNING-->
+        <section class="section-purple">
             <div>
                 <div>
                     <img src="img/planning1.png" alt="planning">
@@ -179,7 +173,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="section-purple">
             <h2>
                 Benefits of working with us
             </h2>
@@ -333,8 +327,8 @@
     </main>
 
     <!--FOOTER-->
-    <footer>
-        <div>
+    <footer class="footer container">
+        <div class="section-purple">
             <div>
                 <h4>
                     GET STARTED
