--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <!--STRATEGIC PLANNING-->
         <section class="section-purple">
-            <div>
+            <div class="row">
                 <div>
                     <img src="img/planning1.png" alt="planning">
                 </div>
@@ -124,203 +124,209 @@
 
 <!--TESTIMONIALS-->
         <section>
-            <div>
-                <p>
-                TESTIMONIALS
-                </p>
-                <h2>
-                    We are committed expert partners
-                </h2>
-                <p>
-                    We place huge value on strong relationships and have seen the benefit they bring to our business. Costumer feedback is vital in helping us to get it right.
-                </p>
-            </div>
-
-            <div>
+            <div class="row">
                 <div>
-                    <img src="img/testimonial1.jpg" alt="testimonialuno">
+                    <p>
+                    TESTIMONIALS
+                    </p>
+                    <h2>
+                        We are committed expert partners
+                    </h2>
+                    <p>
+                        We place huge value on strong relationships and have seen the benefit they bring to our business. Costumer feedback is vital in helping us to get it right.
+                    </p>
                 </div>
-                <p>
-                    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, veritatis dolore odio, doloremque nam similique nesciunt in beatae sint reprehenderit voluptatum, quasi deserunt repellendus esse animi! Vel obcaecati nam debitis!"
-                </p>
-                <p>
-                    NAT REYNOLDS
-                </p>
-            </div>
 
-            <div>
                 <div>
-                    <img src="img/testimonial2.jpg" alt="testimonialdue">
+                    <div>
+                        <img src="img/testimonial1.jpg" alt="testimonialuno">
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, veritatis dolore odio, doloremque nam similique nesciunt in beatae sint reprehenderit voluptatum, quasi deserunt repellendus esse animi! Vel obcaecati nam debitis!"
+                    </p>
+                    <p>
+                        NAT REYNOLDS
+                    </p>
                 </div>
-                <p>
-                    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, veritatis dolore odio, doloremque nam similique nesciunt in beatae sint reprehenderit voluptatum, quasi deserunt repellendus esse animi! Vel obcaecati nam debitis!"
-                </p>
-                <p>
-                    CELIA ALMEDA
-                </p>
-            </div>
 
-            <div>
                 <div>
-                    <img src="img/testimonial3.jpg" alt="testimonialdue">
+                    <div>
+                        <img src="img/testimonial2.jpg" alt="testimonialdue">
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, veritatis dolore odio, doloremque nam similique nesciunt in beatae sint reprehenderit voluptatum, quasi deserunt repellendus esse animi! Vel obcaecati nam debitis!"
+                    </p>
+                    <p>
+                        CELIA ALMEDA
+                    </p>
                 </div>
-                <p>
-                    "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, veritatis dolore odio, doloremque nam similique nesciunt in beatae sint reprehenderit voluptatum, quasi deserunt repellendus esse animi! Vel obcaecati nam debitis!"
-                </p>
-                <p>
-                    BOB ROBERTS
-                </p>
+
+                <div>
+                    <div>
+                        <img src="img/testimonial3.jpg" alt="testimonialdue">
+                    </div>
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, veritatis dolore odio, doloremque nam similique nesciunt in beatae sint reprehenderit voluptatum, quasi deserunt repellendus esse animi! Vel obcaecati nam debitis!"
+                    </p>
+                    <p>
+                        BOB ROBERTS
+                    </p>
+                </div>
             </div>
         </section>
 
         <section class="section-purple">
-            <h2>
-                Benefits of working with us
-            </h2>
-            <div>
+            <div class="row">
                 <h2>
-                    01
+                    Benefits of working with us
                 </h2>
-                <h3>
-                    Hight Quality
-                </h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
-                </p>
                 <div>
-                    <button>
-                        more
-                    </button>
+                    <h2>
+                        01
+                    </h2>
+                    <h3>
+                        Hight Quality
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
+                    </p>
+                    <div>
+                        <button>
+                            more
+                        </button>
+                    </div>
                 </div>
-            </div>
 
-            <h2>
-                Benefits of working with us
-            </h2>
-            <div>
                 <h2>
-                    02
+                    Benefits of working with us
                 </h2>
-                <h3>
-                    Creative Team
-                </h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
-                </p>
                 <div>
-                    <button>
-                        more
-                    </button>
+                    <h2>
+                        02
+                    </h2>
+                    <h3>
+                        Creative Team
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
+                    </p>
+                    <div>
+                        <button>
+                            more
+                        </button>
+                    </div>
                 </div>
-            </div>
 
-            <h2>
-                Benefits of working with us
-            </h2>
-            <div>
                 <h2>
-                    03
+                    Benefits of working with us
                 </h2>
-                <h3>
-                    Amazing Results
-                </h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
-                </p>
                 <div>
-                    <button>
-                        more
-                    </button>
+                    <h2>
+                        03
+                    </h2>
+                    <h3>
+                        Amazing Results
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
+                    </p>
+                    <div>
+                        <button>
+                            more
+                        </button>
+                    </div>
                 </div>
-            </div>
 
-            <h2>
-                Benefits of working with us
-            </h2>
-            <div>
                 <h2>
-                    04
+                    Benefits of working with us
                 </h2>
-                <h3>
-                    Best Pricing
-                </h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
-                </p>
                 <div>
-                    <button>
-                        more
-                    </button>
+                    <h2>
+                        04
+                    </h2>
+                    <h3>
+                        Best Pricing
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
+                    </p>
+                    <div>
+                        <button>
+                            more
+                        </button>
+                    </div>
                 </div>
-            </div>
 
-            <h2>
-                Benefits of working with us
-            </h2>
-            <div>
                 <h2>
-                    05
+                    Benefits of working with us
                 </h2>
-                <h3>
-                    Innovations
-                </h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
-                </p>
                 <div>
-                    <button>
-                        more
-                    </button>
+                    <h2>
+                        05
+                    </h2>
+                    <h3>
+                        Innovations
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
+                    </p>
+                    <div>
+                        <button>
+                            more
+                        </button>
+                    </div>
                 </div>
-            </div>
 
-            <h2>
-                Benefits of working with us
-            </h2>
-            <div>
                 <h2>
-                    06
+                    Benefits of working with us
                 </h2>
-                <h3>
-                    24/7 Support
-                </h3>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
-                </p>
                 <div>
-                    <button>
-                        more
-                    </button>
+                    <h2>
+                        06
+                    </h2>
+                    <h3>
+                        24/7 Support
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni, unde, non ipsam doloribus vero illo omnis perspiciatis consectetur deleniti consequuntur alias facere, quod sint! Impedit minima ad quo distinctio autem?
+                    </p>
+                    <div>
+                        <button>
+                            more
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
 
 <!--ABOUT-->
         <section>
-            <h1>
-                About Us
-            </h1>
-            <div>
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore molestiae quia dignissimos illo fugit non similique magnam harum nobis fuga.
-                </p>
-            </div>
-            <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo earum quis aperiam quam ipsam commodi magnam ut dolores quibusdam quae.
-                </p>
-            </div>
-            <div>
+            <div class="row">
+                <h1>
+                    About Us
+                </h1>
                 <div>
-                    <img src="img/about.jpg" alt="about">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore molestiae quia dignissimos illo fugit non similique magnam harum nobis fuga.
+                    </p>
                 </div>
                 <div>
-                    <h2>
-                        I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
-                    </h2>
-                    <button>
-                        Find me on linkedin
-                    </button>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo earum quis aperiam quam ipsam commodi magnam ut dolores quibusdam quae.
+                    </p>
+                </div>
+                <div>
+                    <div>
+                        <img src="img/about.jpg" alt="about">
+                    </div>
+                    <div>
+                        <h2>
+                            I help companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.
+                        </h2>
+                        <button>
+                            Find me on linkedin
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -329,32 +335,34 @@
     <!--FOOTER-->
     <footer class="footer container">
         <div class="section-purple">
-            <div>
-                <h4>
-                    GET STARTED
-                </h4>
-                <h2>
-                    Simple, Transparent Pricing
-                </h2>
-                <h1>
-                    It's Free!
-                </h1>
-            </div>
-
-            <div>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum cupiditate dicta fugit ratione doloremque nihil, optio autem magni veritatis mollitia molestiae alias quam natus blanditiis explicabo laboriosam adipisci provident repellat.
-                </p>
-                <button>
-                    Get Started
-                </button>
-                <p>
-                    Copyright 2021 Boolean , Classe XX , Privacy policy
-                </p>
+            <div class="row">
+                <div>
+                    <h4>
+                        GET STARTED
+                    </h4>
+                    <h2>
+                        Simple, Transparent Pricing
+                    </h2>
+                    <h1>
+                        It's Free!
+                    </h1>
+                </div>
+            
+                <div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum cupiditate dicta fugit ratione doloremque nihil, optio autem magni veritatis mollitia molestiae alias quam natus blanditiis explicabo laboriosam adipisci provident repellat.
+                    </p>
+                    <button>
+                        Get Started
+                    </button>
+                    <p>
+                        Copyright 2021 Boolean , Classe XX , Privacy policy
+                    </p>
+                </div>
             </div>
         </div>
 
-        <div class="containerblack">
+        <div class="row">
             <div>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quam repellendus minima earum vitae dicta hic quasi? Eligendi corporis cupiditate unde, aliquam suscipit illum voluptate asperiores facilis soluta mollitia deserunt?
